--- a/stilus.css
+++ b/stilus.css
@@ -2,40 +2,41 @@
     margin: auto;
 }
 
-
-nav ul{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-nav li{
-    list-style-type: none;
-}
-
 main{
     display: grid;
-    grid-template-columns: "h h h"
-                            "n n n"
-                            "as ar ar"
-                            "f f f";
+    grid-template-areas: "h h h"
+                        "n n n"
+                        "as ar ar"
+                        "f f f";
 }
 
 header{
-    grid-template-areas: h;
+    grid-area: h;
 }
 
 nav{
-    grid-template-areas: n;
-}
-
-article{
-    grid-template-areas: ar;
+    grid-area: n;
 }
 
 aside{
-    grid-template-areas: ar;
+    grid-area: as;
+}
+
+article{
+    grid-area: ar;
 }
 
 footer{
-    grid-template-areas: f;
+    grid-area: f;
+}
+
+nav li{
+    display: inline-block;
+    list-style-type: none;
+    
+}
+
+nav a{
+    text-decoration: none;
+    color: black;
 }
